--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,16 +1,18 @@
 
 NAME = Fixed
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address
 CC = c++
 RM = rm -f
 
 SRCS =	main.cpp \
 		Fixed.cpp \
-		
 
 OBJC = ${SRCS:.cpp=.o}
 
 all: ${NAME}
+
+.cpp.o:
+	${CC} -c $< -o $(<:.cpp=.o) ${CFLAGS}
 
 ${NAME}: ${OBJC}
 	${CC} ${CFLAGS} ${OBJC} -o ${NAME}
